# BioReason-Pro

./: .gitignore  README.md  RESEARCH_README.md  eval.py  organism_list.txt  predict.py  pyproject.toml  train_protein_grpo.py  train_protein_llm.py
bioreason2/dataset/cafa5/: subset.py
bioreason2/models/: protein_llm.py  protein_vllm.py
bioreason2/utils/: research_registry.py  tracking.py
configs/disease_benchmark/: artifact_publish_registry.json  data_registry.json  eval_target_registry.json  wandb_asset_sources.env.example  wandb_registry_paths.env.example
domain/learning-log/: 2026-04-07-dataset-iteration-notes.md
domain/specification/: PLAN.md
domain/specification/busiless-rules/: specification.md
domain/specification/learning-log/: 2026-04-07-paper-rl-comparison-model.md
evals/: cafa_evals.py
examples/: test_proteins.tsv
scripts/: build_disease_benchmark_datasets.py  build_disease_temporal_split_artifact.py  materialize_data_bundle.py  materialize_model_source.py  register_research_assets.py  run_registered_eval.py  run_temporal_split_artifact_pipeline.py  sh_eval.sh  sh_train_protein_grpo.sh  sh_train_protein_qwen_staged.sh
test/: test_build_disease_temporal_split_artifact.py  test_cafa_eval_contracts.py  test_dataset_subset_contracts.py  test_eval_contracts.py  test_materialize_model_source_contracts.py  test_register_research_assets_contracts.py  test_research_registry_contracts.py  test_run_registered_eval_contracts.py  test_run_temporal_split_artifact_pipeline.py  test_step0_disease_temporal_split.py  test_train_protein_grpo_contracts.py  test_training_tracking_contracts.py
